                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-08-2005 changed: made downloading of "Shoutcast Top 500" cancelable
 - 04-08-2005 updated: German language file
 - 04-08-2005 updated: Dutch language file (Thnx to nightspirit)
 - 04-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 04-08-2005 added: subtitles can reside in "subs/","subtitles/","../subs/" and "../subtitles/".
 - 04-08-2005 fixed: fat-x truncation could result in filenames ending with ' ' making them unreadable.
 - 04-08-2005 fixed: vobsubs with long filenames failed to work due to fat-x limits.
 - 04-08-2005 added: proper stored rar support.
 - 03-08-2005 fixed: when streaming, if the status bar for mplayer contained $, xbmc would stall
 - 03-08-2005 fixed: Eject after playing media on disk would crash.
 - 03-08-2005 fixed: my music, scan button does not immediately show "Stop Scan" label when scan is started
 - 03-08-2005 fixed: HTTPAPI: Pause command
 - 03-08-2005 fixed: mplayer was unable to find certain dlls, this resulted in unplayable dvds
 - 02-08-2005 fixed: Position of subs could change with seek or volume change.
 - 02-08-2005 fixed: Python dialogs wouldn't render.
 - 02-08-2005 added: More stuff for the new video OSD system.
 - 02-08-2005 fixed: more menu fixes for the dvd player (dlls in \system\players\dvdplayer\ have to be updated)
 - 02-08-2005 updated: libdvdcss for dvdplayer to v1.2.9
 - 02-08-2005 added: Initial support for audio and subtitle settings to new video OSD layout (currently disabled)
 - 02-08-2005 fixed: DialogSeekBar was unloaded when it was closed, rather than on app close.
 - 02-08-2005 fixed: SITE HELP command wasn't spec-correct.  Thanks to ljardine.